<?xml version="1.0"?>
<package format="3">
  <name>matplotlibcpp</name>
  <version>0.0.0</version>
  <description>The matplotlibcpp package</description>
  <maintainer email="swedeenjames@gmail.com">james</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Python</depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
